very basic homepage styling.

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,3 +2,12 @@
  * CSS code specific to home page
  * (margin/padding adjustments)
  * ------------------------------------- */
+.container {
+  width: 700px;
+  text-align: center;
+}
+
+.btn-lg {
+  background-color: $blue;
+  border-radius: 15px;
+}
