--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner">
+<div class="container">
+  <div class="banner-content">
+    <h1>BE$T B€T</h1>
+    <p>Bet big.  Bet small.  Bet on anything at all!</p>
+    <%= link_to "Let's make a bet!", new_user_session_path, class: "btn btn-lg btn-primary" %>
+  </div>
+  </div>
+</div>
