--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -2,19 +2,24 @@
  * Fonts
  * ------------------------------------- */
 // Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
-$base-font: "Open Sans", "Helvetica", "sans-serif";
-$header-font: "Raleway", "Helvetica", "sans-serif";
+// @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
+// $base-font: "Open Sans", "Helvetica", "sans-serif";
+// $header-font: "Raleway", "Helvetica", "sans-serif";
 
 // Local fonts (uncomment following lines)
-// @font-face {
-//   font-family: "Font Name";
-//   src: font-url('FontFile.eot');
-//   src: font-url('FontFile.eot?#iefix') format('embedded-opentype'),
-//        font-url('FontFile.woff') format('woff'),
-//        font-url('FontFile.ttf') format('truetype')
-// }
-// $my-font: "Font Name";
+@font-face {
+  font-family: "bariolregular";
+  src: font-url('/assets/bariolregular.otf') format("truetype");
+}
+
+@font-face {
+  font-family: "Odin Rounded";
+  src: font-url('/assets/Odin Rounded.otf') format("truetype");
+}
+
+$header-font: "Odin Rounded";
+$base-font: "bariolregular";
+
 
 // Font-size and line-height
 $base-size: 16px;
@@ -24,11 +29,11 @@ $base-height: 1.4;
  * Colors
  * ------------------------------------- */
 // Scheme
-$brand-color: #D23333;
+$brand-color: #00C522;
 
 $red: #EE5F5B;
-$blue: #469AE0;
+$blue: #234C63;
 $yellow: #FDB631;
 $orange: #E67E22;
-$green: #32B796;
-$gray: #000000;
+$green: #00C522;
+$gray: #EFEFEF;
