--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,6 +8,9 @@
 }
 
 .btn-lg {
+  font-family: 'Varela Round', sans-serif;
   background-color: $blue;
   border-radius: 15px;
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
