--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -6,24 +6,54 @@
 // $base-font: "Open Sans", "Helvetica", "sans-serif";
 // $header-font: "Raleway", "Helvetica", "sans-serif";
 
+// Font-size and line-height
+$base-size:          16px;
+$base-height:        1.4;
+$font-weight-light:  100;
+$font-weight-normal: 300;
+$font-weight-semi-bold: 500;
+$font-weight-bold:   900;
+
 // Local fonts (uncomment following lines)
 @font-face {
-  font-family: "bariolregular";
-  src: font-url('/assets/bariolregular.otf') format("truetype");
+  font-family: "Odin Rounded";
+  src: url('/assets/fonts/Odin/OdinRounded_Bold.otf') format("truetype");
+  font-weight: $font-weight-bold;
 }
 
 @font-face {
   font-family: "Odin Rounded";
-  src: font-url('/assets/Odin Rounded.otf') format("truetype");
+  src: url('/assets/fonts/Odin/OdinRounded_Regular.otf') format("truetype");
+  font-weight: $font-weight-normal;
 }
 
-$header-font: "Odin Rounded";
-$base-font: "bariolregular";
+@font-face {
+  font-family: "Odin Rounded";
+  src: url('/assets/fonts/Odin/OdinRounded_light.otf') format("truetype");
+  font-weight: $font-weight-light;
+}
 
+@font-face {
+  font-family: "Bariol";
+  src: url('/assets/fonts/Bariol/Bariol_Bold.otf') format("truetype");
+  font-weight: $font-weight-bold;
+}
 
-// Font-size and line-height
-$base-size: 16px;
-$base-height: 1.4;
+@font-face {
+  font-family: "Bariol";
+  src: url('/assets/fonts/Bariol/Bariol_Regular.otf') format("truetype");
+  font-weight: $font-weight-normal;
+}
+
+@font-face {
+  font-family: "Bariol";
+  src: url('/assets/fonts/Bariol/Bariol_Light.otf') format("truetype");
+  font-weight: $font-weight-light;
+}
+
+// Font-family
+$header-font: "Odin Rounded", "Helvetica", "sans-serif";
+$base-font: "Bariol", "Helvetica", "sans-serif";
 
 /* -------------------------------------
  * Colors
@@ -36,4 +66,4 @@ $blue: #234C63;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #00C522;
-$gray: #EFEFEF;
+$grey: #EFEFEF;
