--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,30 @@
-<div class="banner-log-in" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= image_path 'imgres.jpg' %> );">
+<div class="banner-log-in" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= image_path 'login.jpg' %> );">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
 
-<div class="container log-in">
-  <div class="row">
+        <div class="log-in">
+          <h1>Sign up</h1>
 
-      <h1>Sign up</h1>
+          <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= f.error_notification %>
 
-      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= f.error_notification %>
+          <div class="form-inputs">
+            <%= f.input :email, required: true, autofocus: true %>
+            <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+            <%= f.input :password_confirmation, required: true %>
+          </div>
 
-      <div class="form-inputs">
-        <%= f.input :email, required: true, autofocus: true %>
-        <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-        <%= f.input :password_confirmation, required: true %>
+          <div class="form-actions">
+          <%= f.button :submit, "Sign up", {class: "btn sign-up"} %>
+          </div>
+          <% end %>
+          <h4>or</h4>
+
+          <%= render "devise/shared/links" %>
+
+         </div>
       </div>
-
-      <div class="form-actions">
-      <%= f.button :submit, "Sign up", {class: "btn btn-primary"} %>
-      </div>
-      <% end %>
-
-      <%= render "devise/shared/links" %>
-
-
+    </div>
   </div>
-</div>
 </div>
