--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,24 @@
-<div class="banner">
-<div class="container">
+<div class="banner-create">
   <div class="banner-content">
-    <h1>BE$T B€T</h1>
-    <p>Bet big.  Bet small.  Bet on anything at all!</p>
-    <%= link_to "Let's make a bet!", new_user_session_path, class: "btn btn-lg btn-primary" %>
-  </div>
-  </div>
+      <h2><em><strong>Create your b€t today!.</strong></em></h2>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xs-12">
+                <div class="form-group">
+                  <%= simple_form_for(@pool) do |f| %>
+                      <%= f.input :title, required: false, input_html:{class:"my_input"}, label_html:{class:"my_label"}, wrapper_html:{class:"my_wrapper"}, placeholder: "Title of your b€t.." %>
+                  <div class="form-group">
+                    <%= simple_form_for(@selection) do |f| %>
+                      <%= f.input :title, :as => :hidden, :input_html => { :value => "some value" }%>
+                      <%= f.submit "+", class: 'btn btn-primary bold-text' %>
+                    <% end %>
+                  </div>
+                    <%= f.input :title, required: false, input_html:{class:"my_input"}, label_html:{class:"my_label"}, wrapper_html:{class:"my_wrapper"}, placeholder: "Title of your b€t.." %>
+                    <%= f.button :submit, class: 'btn btn-primary bold-text' %>
+                  <% end %>
+                </div>
+            </div>
+          </div>
+        </div>
+     </div>
 </div>
