--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -12,7 +12,7 @@ $headings-font-family:    $header-font;
 
 // Semantic color scheme
 // => http://getbootstrap.com/customize/#colors
-$gray-base:       $gray;
+$gray-base:       $grey;
 $brand-primary:  #4285F4;
 $brand-success:   $green;
 $brand-info:      $yellow;
