--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,19 +6,21 @@
             <div class="col-xs-12">
                 <div class="form-group">
                   <%= simple_form_for(@pool) do |f| %>
-                      <%= f.input :title, required: false, input_html:{class:"my_input"}, label_html:{class:"my_label"}, wrapper_html:{class:"my_wrapper"}, placeholder: "Title of your b€t.." %>
-                  <div class="form-group">
-                    <%= simple_form_for(@selection) do |f| %>
-                      <%= f.input :title, :as => :hidden, :input_html => { :value => "some value" }%>
-                      <%= f.submit "+", class: 'btn btn-primary bold-text' %>
-                    <% end %>
-                  </div>
-                    <%= f.input :title, required: false, input_html:{class:"my_input"}, label_html:{class:"my_label"}, wrapper_html:{class:"my_wrapper"}, placeholder: "Title of your b€t.." %>
-                    <%= f.button :submit, class: 'btn btn-primary bold-text' %>
-                  <% end %>
+                        <%= f.input :title, required: false, input_html:{class:"my_input"}, label_html:{class:"my_label"}, wrapper_html:{class:"my_wrapper"}, placeholder: "Title of your b€t.." %>
                 </div>
             </div>
           </div>
+          <div class="row">
+            <div class="form-group">
+              <div class="col-xs-8" id="pool-stake">
+                      <%= f.input :stake, required: false, input_html:{class:"my_input"}, label_html:{class:"pool-stake"}, wrapper_html:{class:"my_wrapper"}, placeholder: "For how much are we playing?" %>
+              </div>
+              <div class="col-xs-4">
+                  <%= f.button :submit, class: 'btn btn-primary bold-text pool-start' %>
+                <% end %>
+              </div>
+            </div>
+          </div>
         </div>
-     </div>
+  </div>
 </div>
