finished fluid homepage beahaviour

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -22,3 +22,13 @@
 .pool-stake {
   position: absolute;
 }
+
+.fake-div {
+  background-color: red;
+  height: 100px;
+}
+
+.fake-btn {
+  position: absolute;
+  background-color: blue;
+}
