--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,13 +2,13 @@
  * CSS code specific to home page
  * (margin/padding adjustments)
  * ------------------------------------- */
-.container {
-  width: 700px;
-  text-align: center;
-  color: $green;
-  font-family: $base-font;
-  font-weight: bold;
-}
+// .container {
+//   width: 700px;
+//   text-align: center;
+//   color: $green;
+//   font-family: $base-font;
+//   font-weight: bold;
+// }
 
 .btn-lg {
   font-family: $header-font;
