--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,39 +1,29 @@
-<div class="banner">
-  <div class="container">
-    <div class="banner-content">
-      <h1>BE$T B€T</h1>
-      <p>Bet big.  Bet small.  Bet on anything at all!</p>
-      <%= link_to "Let's make a bet!", new_user_session_path, class: "btn btn-lg btn-primary" %>
-    </div>
+
+
+<div class="banner-create">
+  <div class="banner-content">
+    <h2><em><strong>Create your b€t today!.</strong></em></h2>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="form-group">
+                      <%= simple_form_for(@pool) do |f| %>
+                          <%= f.input :title, required: false, input_html:{class:"my_input"}, label_html:{class:"my_label"}, wrapper_html:{class:"my_wrapper"}, placeholder: "Title of your b€t.." %>
+                      <div class="form-group">
+                        <%= simple_form_for(@selection) do |f| %>
+                          <%= f.input :title, :as => :hidden, :input_html => { :value => "some value" }%>
+                          <%= f.submit "+", class: 'btn btn-primary bold-text' %>
+                     <% end %>
+                    </div>
+                        <%= f.input :title, required: false, input_html:{class:"my_input"}, label_html:{class:"my_label"}, wrapper_html:{class:"my_wrapper"}, placeholder: "Title of your b€t.." %>
+                        <%= f.button :submit, class: 'btn btn-primary bold-text' %>
+                      <% end %>
+                    </div>
+                </div>
+              </div>
+         </div>
+     </div>
   </div>
-</div>
 
 
-<%= simple_form_for @pool do |f| %>
-        <td><%= f.input :closing_date, as: :string, input_html: {class: "form-control datepicker", id:"closing_date"}%></td>
-    <% end %>
 
-<script>
-  $(function() {
-    $('#datepicker').datepicker({
-      dateFormat: 'yy-dd-mm',
-      onSelect: function(datetext){
-
-var d = new Date(); // for now
-
-var h = d.getHours();
-h = (h < 10) ? ("0" + h) : h ;
-
-var m = d.getMinutes();
-m = (m < 10) ? ("0" + m) : m ;
-
-var s = d.getSeconds();
-s = (s < 10) ? ("0" + s) : s ;
-
-datetext = datetext + " " + h + ":" + m + ":" + s;
-
-$('#datepicker').val(datetext);
-}
-});
-  });
-</script>
