--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -24,7 +24,6 @@
 }
 
 .fake-div {
-  background-color: red;
   height: 100px;
 }
 
@@ -34,7 +33,7 @@
 }
 
 /* Style the tab */
-/*body{
+.body-tabs{
       margin-top: 100px;
       font-family: 'Trebuchet MS', serif;
       line-height: 1.6
@@ -42,7 +41,7 @@
     .container-fluid{
       width: 800px;
       margin: 0 auto;
-    }*/
+    }
 
 
 
