--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,27 +1,33 @@
 <div class="banner-create">
   <div class="banner-content">
-      <h2><em><strong>Create your b€t today!.</strong></em></h2>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-xs-12">
-                <div class="form-group">
-                  <%= simple_form_for(@pool) do |f| %>
-                  <%= f.input :title, required: false, input_html:{class:"my_input"}, label_html:{class:"my_label"}, wrapper_html:{class:"my_wrapper"}, placeholder: "Title of your b€t.." %>
-                </div>
-            </div>
+    <h2><em><strong>Create your b€t today!.</strong></em></h2>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <%= simple_form_for(@pool) do |f| %>
+            <%= f.input :title, required: false, input_html:{class:"my_input"}, label_html:{class:"my_label"}, wrapper_html:{class:"my_wrapper"}, placeholder: "Title of your b€t.." %>
           </div>
-          <div class="row">
-            <div class="form-group">
-              <div class="col-xs-8" id="pool-stake">
-                <%= f.input :stake, required: false, input_html:{class:"my_input"}, label_html:{class:"pool-stake"}, wrapper_html:{class:"my_wrapper"}, placeholder: "For how much are we playing?" %>
-              </div>
-              <div class="col-xs-4">
-                  <%= f.button :submit, class: 'btn btn-primary bold-text pool-start' %>
-                <% end %>
-              </div>
-            </div>
-          </div>
-          <%= render 'selections/new' %>
         </div>
+      </div>
+      <div class="row">
+        <div class="form-group">
+          <div class="col-xs-8" id="pool-stake">
+            <%= f.simple_fields_for :selections do |ff| %>
+            <%= render 'selection_fields', f: ff %>
+            <% end %>
+            <div class="links">
+              <%= link_to_add_association 'add selection', f, :selections%>
+            </div>
+            <%= f.button :submit, class: 'btn btn-primary bold-text pool-start' %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+
+
+
+
