--- a/app/assets/stylesheets/pages/_betsshow.scss
+++ b/app/assets/stylesheets/pages/_betsshow.scss
@@ -18,3 +18,10 @@
   border: solid black 1px;
 
 }
+.betselections{
+  background-color: #244C62;
+  height: 70px;
+  text-align:center;
+  color: white;
+  margin-top: 30px;
+}
