--- a/app/views/bets/index.html.erb
+++ b/app/views/bets/index.html.erb
@@ -25,13 +25,24 @@
       </li>
     </ul>
   </div>
-  <div class="HSVHSV">
 
+  <div class="HSVHSV">
   </div>
 
   <div class="descriptionbet">
     <h1><%= @bet.pool.description %></h1>
   </div>
+
+  <% @pool.selections.each do |selection| %>
+  <div class=" col-xs-6 col-md-4">
+    <div class="betselections">
+    <% simple_form_for [selection, @bet] do |f| %>
+    <%= f.button :submit, class: 'btn btn-primary' %>
+    <% end %>
+   </div>
+ </div>
+ <% end %>
+
 </div>
 </div>
 </div>
