solved styled container fluid

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,13 +2,13 @@
  * CSS code specific to home page
  * (margin/padding adjustments)
  * ------------------------------------- */
-.container-fluid {
+/*.container-fluid {
   width: 700px;
   text-align: center;
   color: $green;
   font-family: $base-font;
 
-}
+}*/
 
 .btn-lg {
   font-family: $header-font;
@@ -26,14 +26,12 @@
 
 /* Style the tab */
 .body-tabs{
-      margin-top: 100px;
-      font-family: 'Trebuchet MS', serif;
-      line-height: 1.6
+      line-height: 1.6;
     }
-    .container-fluid{
+    /*.container-fluid{
       width: 800px;
       margin: 0 auto;
-    }
+    }*/
 
 
 
