--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="banner-create">
   <div class="banner-content">
-    <h2><em><strong>Create your b€t today!.</strong></em></h2>
+    <h2><em><strong>Create your b€t today!</strong></em></h2>
     <div class="container-fluid">
       <div class="row">
         <div class="col-xs-12">
@@ -11,10 +11,10 @@
                 <div class="fake-div hidden">
                   <div class="body-tabs">
                     <ul class="tabs">
-                      <li class="tab-link current" data-tab="description">What Are the Terms?</li>
-                      <li class="tab-link" data-tab="selections">What are the Choices?</li>
-                      <li class="tab-link" data-tab="stake">What is the Buy in?</li>
-                      <li class="tab-link" data-tab="share">Invite Friends to Bet</li>
+                      <li class="tab-link current" data-tab="description">Terms</li>
+                      <li class="tab-link" data-tab="selections">Choices</li>
+                      <li class="tab-link" data-tab="stake">Stake</li>
+                      <li class="tab-link" data-tab="share">Invite</li>
                     </ul>
                     <div id="description" class="tab-content current">
                       <%= f.input :description, placeholder: "What are the terms of the bet?" %>
