--- a/app/views/bets/show.html.erb
+++ b/app/views/bets/show.html.erb
@@ -6,41 +6,51 @@
      </div>
 
      <div class="betsshow-details">
-       <ul class="list-inline">
-         <li>
-          <i class="fa fa-users fa-3x" aria-hidden="true"></i>
-        </li>
-        <li>
-          <h1>
 
-         </h1>
-       </li>
-     </ul>
-     <ul class="list-inline">
-       <li>
+       <div class="descriptionbetdetails">
+        <i class="fa fa-users fa-3x" aria-hidden="true"></i>
+        <h1><%= Bet.all.where(pool_id: @pool.id).count %></h1>
+      </div>
+
+
+
+
+      <div class="descriptionbetdetails">
+
         <i class="fa fa-money fa-3x" aria-hidden="true"></i>
-      </li>
-      <li>
-        <h1><%= @pool.stake %></h1>
-      </li>
-    </ul>
+        <h1 id= "moneeey"><%= @pool.stake %></h1>
+      </div>
+
+
+
+    </div>
+
+    <div class="HSVHSV">
+    </div>
+
+    <div class="descriptionbet">
+      <h1><%= @pool.description %></h1>
+    </div>
+
+    <% @pool.selections.each do |selection| %>
+    <div class=" col-xs-6 col-md-4">
+
+      <% if selection.id == @selection.id %>
+
+      <div class="selectedoption">
+
+        <%= @selection.title %>
+      </div>
+      <h2>Your guess</h2>
+      <% else %>
+      <div class="betselection">
+        <%= selection.title %>
+      </div>
+      <% end %>
+
+    </div>
+    <% end %>
+
   </div>
-
-  <div class="HSVHSV">
-  </div>
-
-  <div class="descriptionbet">
-    <h1><%= @pool.description %></h1>
-  </div>
-
-  <% @pool.selections.each do |selection| %>
-  <div class=" col-xs-6 col-md-4">
-    <div class="betselections">
-
-   </div>
- </div>
- <% end %>
-
-</div>
 </div>
 </div>
