--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -64,8 +64,9 @@ $brand-color: #00C522;
 
 $red: #EE5F5B;
 $blue: #234C63;
+$lighter-blue: #92A6B2;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #00C522;
-$gray: #92A6B2;
+$gray: #D8D8D8;
 
