--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -19,9 +19,16 @@
   padding-bottom: 2px;
 }
 
+.banner-create {
+  background-color: $blue;
+}
+
+/*.form-group {
+  background-color: $lighter-blue
+}*/
+
 .fake-btn {
-  position: absolute;
-  background-color: blue;
+  display: block;
 }
 
 /* Style the tab */
@@ -33,33 +40,57 @@
       margin: 0 auto;
     }*/
 
-
-
     ul.tabs{
       margin: 0px;
       padding: 0px;
       list-style: none;
+      background-color: white;
+      display: flex;
     }
+
     ul.tabs li{
-      background: none;
+      background: white;
       color: #222;
-      display: inline-block;
       padding: 10px 15px;
       cursor: pointer;
+      flex: 1 1 auto;
+      border-top-style: none;
+      border-right-style: solid;
+      border-bottom-style: none;
+      border-left-style: none;
+      border-color: $gray;
+      border-width: 2px;
     }
 
     ul.tabs li.current{
-      background: #ededed;
+      background: $lighter-blue;
       color: #222;
     }
 
     .tab-content{
       display: none;
-      background: #ededed;
+      background: $gray;
       padding: 15px;
+      min-height: 280px;
+      position: relative;
     }
 
     .tab-content.current{
       display: inherit;
     }
 
+.real-submit {
+  margin-top: 7px;
+}
+
+.description_wrapper {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  right: 15px;
+}
+
+.description_input {
+  min-height: 180px;
+  min-width: 315px;
+}
