--- a/app/views/bets/show.html.erb
+++ b/app/views/bets/show.html.erb
@@ -5,7 +5,7 @@
        <h1><%= @pool.title %></h1>
      </div>
 
-     <div class="betsshow-details">
+     <div class="pools_show-details">
        <ul class="list-inline">
          <li>
           <i class="fa fa-users fa-3x" aria-hidden="true"></i>
@@ -34,7 +34,7 @@
   </div>
 
   <% @pool.selections.each do |selection| %>
-  <div class=" col-xs-6 col-md-4">
+  <div class=" col-xs-6 col-md-6">
     <div class="betselections">
 
    </div>
