--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -5,7 +5,7 @@
        <h1><%= @pool.title %></h1>
      </div>
 
-     <div class="betsshow-details">
+     <div class="pools_show-details">
        <ul class="list-inline">
          <li>
           <i class="fa fa-users fa-3x" aria-hidden="true"></i>
