--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,20 +1,20 @@
     <div class="container">
-<div class="banner-create">
-  <div class="banner-content">
-    <h2><em><strong>Create your b€t today!</strong></em></h2>
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="form-group">
-            <%= simple_form_for(@pool) do |f| %>
-              <%= f.input :title, label: false,   required: false, input_html:{class:"my_input"}, label_html:{class:"my_label"}, wrapper_html:{class:"my_wrapper"}, placeholder: "Title of your b€t.." %>
-              <div class="fake-btn btn btn-primary">Start a bet</div>
+      <div class="banner-create">
+        <div class="banner-content">
+          <h2><em><strong>Create your b€t today!</strong></em></h2>
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="form-group">
+                <%= simple_form_for(@pool) do |f| %>
+                <%= f.input :title, label: false,   required: false, input_html:{class:"my_input"}, label_html:{class:"my_label"}, wrapper_html:{class:"my_wrapper"}, placeholder: "Title of your b€t.." %>
+                <div class="fake-btn btn btn-primary">Start a bet</div>
                 <div class="fake-div hidden">
                   <div class="body-tabs">
                     <ul class="tabs">
                       <li class="tab-link current" data-tab="description"><em>Terms</em></li>
                       <li class="tab-link" data-tab="selections"><em>Opt</em></li>
                       <li class="tab-link" data-tab="stake"><em>Stake</em></li>
-                     <li class="tab-link" data-tab="timer"><em>End</em></li>
+                      <li class="tab-link" data-tab="timer"><em>End</em></li>
                       <li class="tab-link last-tab" data-tab="share"><em>Inv</em></li>
                     </ul>
                     <div id="description" class="tab-content current">
@@ -47,21 +47,27 @@
                       </div>
                     </div>
                     <div id="share" class="tab-content">
-                      <%= render 'share/invite' %>
+                      <%= f.simple_fields_for :invites do |ff| %>
+                      <%= render 'invite_fields', f: ff %>
+                      <% end %>
+                      <div class="links">
+                        <%= link_to_add_association 'add invtie', f, :invites %>
+                      </div>
+                      <%# render 'share/invite' %>
                     </div>
                   </div>
                 </div>
-              <div class="real-submit hidden">
-              <%= f.button :submit, class: 'btn btn-primary bold-text' %>
+                <div class="real-submit hidden">
+                  <%= f.button :submit, class: 'btn btn-primary bold-text' %>
+                </div>
+                <% end %>
               </div>
-            <% end %>
+            </div>
           </div>
         </div>
       </div>
+      <%= render 'poolcard' %>
     </div>
-  </div>
-  <%= render 'poolcard' %>
-</div>
 
 
 
