--- a/app/views/share/_invite.html.erb
+++ b/app/views/share/_invite.html.erb
@@ -1,20 +1,28 @@
-<div class="container" style="margin-top:20px;">
-  <div class="row">
-    <div class="col-xs-6">
-    <h3 class="text-center">Who wants in?</h3>
-      <div class="well" style="max-height: 300px;overflow: auto;">
-        <ul id="check-list-box" class="list-group checked-list-box">
-        <!-- List should be dynamically generated from user group-->
-          <li class="list-group-item">Cras justo odio</li>
-          <li class="list-group-item" data-color="success">Dapibus ac facilisis in</li>
-          <li class="list-group-item" data-color="info">Morbi leo risus</li>
-          <li class="list-group-item" data-color="warning">Porta ac consectetur ac</li>
-          <li class="list-group-item" data-color="danger">Vestibulum at eros</li>
-        </ul>
-        <br />
-        <button class="btn btn-primary col-xs-12" id="get-checked-data">Invite Now!</button>
-      </div>
-      <pre id="display-json"></pre>
+<div class="row">
+  <div class="col-xs-12">
+  <h3 class="text-center">Who wants in?</h3>
+    <div class="well" style="max-height: 300px;overflow: auto;">
+      <ul id="check-list-box" class="list-group checked-list-box">
+      <!-- List should be dynamically generated from user group-->
+        <% @users.each do |user| %>
+        <li class="list-group-item"><%= user.email %></li>
+        <% end %>
+      </ul>
+      <button type="submit" class="btn btn-primary col-xs-12" id="get-checked-data">Invite Now!</button>
     </div>
+    <!-- <pre id="display-json"></pre> -->
   </div>
 </div>
+
+
+
+
+<!-- <li class="list-group-item" data-color="success">Dapibus ac facilisis in</li>
+<li class="list-group-item" data-color="info">Morbi leo risus</li>
+<li class="list-group-item" data-color="warning">Porta ac consectetur ac</li>
+<li class="list-group-item" data-color="danger">Vestibulum at eros</li> -->
+
+<%#= simple_form_for(@users) do |f|%>
+<%#= f.submit "Accept", class: "btn btn-primary" %>
+<%#= f.submit "Decline", class: "btn btn-danger" %>
+<%# end %>
