--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,1 +1,7 @@
 @import "home";
+@import "placeyourbet";
+@import "login";
+@import "actualbetshow";
+@import "betsshow";
+@import "create_pool";
+@import "placeyourbet";
