--- a/app/assets/stylesheets/pages/_actualbetshow.scss
+++ b/app/assets/stylesheets/pages/_actualbetshow.scss
@@ -20,11 +20,10 @@
 }
 .betselection{
   background-color: #333333;
-  height: 70px;
   text-align:center;
   color: white;
-  margin-top: 30px;
-    font-size: 40px;
+  width: 100px;
+  font-size: 40px;
 }
 .selectedoption{
   background-color: #B12D30;
@@ -37,6 +36,7 @@
 .descriptionbetdetails{
   display:flex;
   width: 40px;
+
 }
 .moneeey{
   padding-left: 10px;
