--- a/app/views/bets/show.html.erb
+++ b/app/views/bets/show.html.erb
@@ -9,6 +9,7 @@
 
        <div class="descriptionbetdetails">
         <i class="fa fa-users fa-3x" aria-hidden="true"></i>
+
         <h1><%= Bet.all.where(pool_id: @pool.id).count %></h1>
       </div>
 
@@ -16,10 +17,13 @@
 
 
       <div class="descriptionbetdetails">
+        <div>
+          <i class="fa fa-money fa-3x" aria-hidden="true"></i>
+        </div>
 
-        <i class="fa fa-money fa-3x" aria-hidden="true"></i>
         <h1 id= "moneeey"><%= @pool.stake %></h1>
       </div>
+
 
 
 
