--- a/app/views/pools/_placebet.html.erb
+++ b/app/views/pools/_placebet.html.erb
@@ -1,4 +1,6 @@
-
+<div class="text-center theheaderforbet">
+<h3>Place Your bet</h3>
+</div>
 <div class="row">
   <form novalidate="novalidate" class="simple_form new_bet" id="new_bet" action="/bets" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="NBZN0aWg/6Dh5TKE6VxP9m4VBh/Yrglq4VJzyhb3DifeHL3Qn9vuFwNvh9a5/fk5oD+Yu6/8zvXW4LOIuU9sXA==">
 
