--- a/app/views/pools/_placebet.html.erb
+++ b/app/views/pools/_placebet.html.erb
@@ -23,7 +23,7 @@
         <% end %>
       </div>
     </div>
-  <input type="submit" name="commit" value="Confirm your bet" class="tn btn-lg btn-success confirmbutton" data-disable-with="Confirm your bet">
+  <input type="submit" name="commit" value="Confirm your <%= @pool.stake %> $ bet" class="tn btn-lg btn-success confirmbutton" data-disable-with="Confirm your bet">
 
 
 </form></div>
