--- a/app/assets/stylesheets/pages/_betsshow.scss
+++ b/app/assets/stylesheets/pages/_betsshow.scss
@@ -1,28 +1,99 @@
-.fa-money{
-  color: green;
-  width: 20px;
+.tags {
+  margin-right: 20px;
 }
-.betsshow-details{
-  display: flex;
- justify-content: space-around;
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 0px) and (max-width: 768px) {
+  .bet-icon {
+    width: 30px;
+    margin-right: 5px;
+  }
 }
-.bettitle{
-  padding: 20px;
-  font-size: 40px;
-  text-align: center;
-}
-.descriptionbet{
-  text-align: center;
-}
-.HSVHSV{
-  border: solid black 1px;
 
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .bet-icon {
+    width: 40px;
+    margin-right: 15px;
+  }
 }
-.betselections{
-  background-color: #244C62;
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .bet-icon {
+    width: 50px;
+    margin-right: 15px;
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  .bet-icon {
+    width: 60px;
+    margin-right: 15px;
+  }
+}
+
+.bet-description {
+  color: $gray;
+  width: 100%;
+}
+.bet-description h1 {
+  color: $green;
+  font-size: 40px;
+  margin: 15px 0px;
+  padding-bottom: 30px;
+}
+
+.bet-description h3 {
+  margin-bottom: 30px;
+}
+
+.bet-description ul {
+  font-size: 18px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.betselections {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $blue;
+  position: relative;
   height: 70px;
-  text-align:center;
   color: white;
-  margin-top: 30px;
+  margin: 10px 0px;
+  padding: 0px;
+  border-radius: 7px;
 }
+
+.betselections:hover {
+  background-color: $green;
+}
+
+.betselections p {
+  font-size: 20px;
+  margin: 0px;
+}
+
+.bet-link {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 5;
+}
+
+hr {
+  margin: 15px 30px;
+  border: 0;
+  border-top: 1px solid $gray-darker;
+}
+
+#toggle {
+    width: 100px;
+    height: 100px;
+}
+
 
