--- a/app/views/pages/_poolcard.html.erb
+++ b/app/views/pages/_poolcard.html.erb
@@ -1,6 +1,9 @@
   <div class="row">
+  <% i = 0 %>
     <% @pools.each do |pool| %>
-    <div class="col-xs-12 col-sm-4">
+
+    <% if i < 9 %>
+    <div class="col-xs-12 col-md-6">
       <div class="card">
         <div class="card-description">
         <%= link_to "", pool_path(pool), class: 'card-link' %>
@@ -28,6 +31,7 @@
         });
       })
     </script>
+    <% end %>
     <% end %>
     <% end %>
   </div>
