--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -39,6 +39,7 @@
       <% if current_user == @pool.user %>
       <%= render 'confirm_winner' %>
       <% end %>
+      <%= render 'chatroom' %>
     </div>
   </div>
 
