--- a/app/views/pools/_placebet.html.erb
+++ b/app/views/pools/_placebet.html.erb
@@ -2,7 +2,11 @@
 <h3>Place Your bet</h3>
 </div>
 <div class="row">
-  <form novalidate="novalidate" class="simple_form new_bet" id="new_bet" action="/bets" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="NBZN0aWg/6Dh5TKE6VxP9m4VBh/Yrglq4VJzyhb3DifeHL3Qn9vuFwNvh9a5/fk5oD+Yu6/8zvXW4LOIuU9sXA==">
+  <form novalidate="novalidate" class="simple_form new_bet" id="new_bet" action="/bets" accept-charset="UTF-8" method="post">
+  <input name="utf8" type="hidden" value="✓">
+  <input type="hidden" name="authenticity_token" value="NBZN0aWg/6Dh5TKE6VxP9m4VBh/Yrglq4VJzyhb3DifeHL3Qn9vuFwNvh9a5/fk5oD+Yu6/8zvXW4LOIuU9sXA==">
+  <input type="hidden" name="pool_id" value="<%= @pool.id %>">
+
 
   <div class="form-group hidden bet_user_id"><input class="form-control hidden" value="<%= current_user.id  %>" type="hidden" name="bet[user_id]" id="bet_user_id"></div>
   <div class="form-group hidden bet_pool_id"><input class="form-control hidden" value="<%= @pool.id %>" type="hidden" name="bet[pool_id]" id="bet_pool_id"></div>
