dealer can edit admin

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "components/index";
 @import "pages/index";
 @import "vendor/index";
-@import "pages/chatbox"
+@import "pages/chatbox";
+@import "pages/confirm_winner";
 
 
