--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -27,7 +27,7 @@
 
 <!-- This is JS for the selections to be unclickable after countdown = 0 -->
 <% content_for(:after_js) do %>
-<script type="text/javascript">
+<script>
   $("#pool-<%=@pool.id%>")
   .countdown("<%= @pool.end_date %>", function(event) {
     $(this).text(
@@ -35,9 +35,11 @@
       );
     $(this).on('finish.countdown', function(){
       $("#pool-<%=@pool.id%>").html("Bet closed").addClass("finish");
-      $(".betselections").click(function(e){
-      $("#pool-<%=@pool.id%>").effect("shake");
-      return false;
+      $(".bet-selections").click(function(){
+        $("#pool-<%=@pool.id%>").effect( "shake", {times:4}, 600 );
+        return false;
+      $(".bet-selection").removeClass("active");
+      $(".confirmbutton").removeClass("active");
       });
     });
   })
