--- a/app/assets/stylesheets/pages/_chatbox.scss
+++ b/app/assets/stylesheets/pages/_chatbox.scss
@@ -2,3 +2,12 @@
   background-color: white;
   margin: 20px;
 }
+.message-list{
+  list-style-type: none;
+}
+#messages{
+  border: solid #EBEBEB 0.6px;
+}
+.messagename{
+  color: red;
+}
