--- a/app/views/pools/_chatroom.html.erb
+++ b/app/views/pools/_chatroom.html.erb
@@ -1,32 +1,22 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-6 col-xs-offset-3">
+    <div class="col-xs-12">
       <div id="chatroom">
         <h1>CHAT-ROOM</h1>
-
-        <form action="#" id="comment-form">
-
-          <div class="form-group">
-            <label for="your-message" >Your comment</label>
-            <textarea type="text" name="content" id="yourMessage" class="form-control" placeholder="Here is my message.."></textarea>
-          </div>
-
-          <div class="form-group hidden">
-            <label for="your-name">From</label>
-            <input type="text" name="content" id="yourName" class="form-control" placeholder="Bob" value="<%= current_user.email %>">
-          </div>
-          <input type="submit" value="Send" class="btn btn-primary send" id="sendform">
-        </form>
+        <%= simple_form_for @message do |f| %>
+        <%= f.input :pool_id, as: :hidden , :input_html =>{:value => @pool.id} %>
+        <%= f.input :user_id, as: :hidden , :input_html => {:value => current_user.id} %>
+        <%= f.input :message, input_html: {id: "your-message"} %>
+        <%= f.button :submit, :class => "send btn btn-primary submitbutton"   %>
+        <% end %>
         <div class="row chatbox">
+          <% @pool.messages.each do |message| %>
           <div id="messages">
-            <ul class="list unstyle">
-              <li>A sample message (posted <span class="date">10 minutes ago</span>) by John</li>
-            </ul>
-
-
+            <p><%= message.user.email%> : <%= message.message %>
+            </p>
           </div>
+          <% end %>
         </div>
-        <button class="btn btn-danger" id="refresh">Refresh Chat</button>
       </div>
     </div>
   </div>
