--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -6,4 +6,6 @@
 @import "betsshow";
 @import "create_pool";
 @import "placeyourbet";
-@import "pools_show"
+@import "pools_show";
+@import "betindex";
+
