--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -12,8 +12,12 @@
   border-radius: 2px;
   margin-top: 10px;
   width: 100%;
+  background-color:#3B5998;
+  border: solid 2px #3B5998;
 }
-
+.facebook:hover{
+  background-color:#4687D6;
+}
 .not-registered{
   margin-top: 10px;
   display: flex;
